# page-analyzer

./: .env_example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: tests-and-checks.yml
page_analyzer/: __init__.py  app.py  padb.py  url_check.py
page_analyzer/templates/: index.html  show.html  url_id.html
